--- a/helm/go-web-app-chart/templates/ingress.yml
+++ b/helm/go-web-app-chart/templates/ingress.yml
@@ -1,25 +1,3 @@
-# apiVersion: networking.k8s.io/v1
-# kind: Ingress
-# metadata:
-#   name: go-web-app
-#   annotation: 
-#    nginx.ingress.kubernetes.io/rewrite-target: /
-# spec:
-# # Ingress controller will watch the ingress resource and create lb.
-#   ingressClassName: nginx
-#   rules:
-#   - host: go-web-app.local
-#     http:
-#       paths:
-#       - path: / 
-#         pathType: Prefix
-#         backend:
-#           service:
-#             name: go-web-app
-#             port:
-#               number: 80
-# Ingress resource for the application
-# Ingress resource for the application
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
@@ -27,6 +5,7 @@ metadata:
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
+  ingressClassName: nginx
   rules:
   - host: go-web-app.local
     http:
@@ -38,6 +17,24 @@ spec:
             name: go-web-app
             port:
               number: 80
+# apiVersion: networking.k8s.io/v1
+# kind: Ingress
+# metadata:
+#   name: go-web-app
+#   annotations:
+#     nginx.ingress.kubernetes.io/rewrite-target: /
+# spec:
+#   rules:
+#   - host: go-web-app.local
+#     http:
+#       paths: 
+#       - path: /
+#         pathType: Prefix
+#         backend:
+#           service:
+#             name: go-web-app
+#             port:
+#               number: 80
 
 
 
